# flappyos

./: .gitignore  Cargo.toml  GNUmakefile  README.md  limine.conf
kernel/: Cargo.toml
kernel/res/: nooo.txt
kernel/src/: asm.rs  assets.rs  bootloader.rs  fb.rs  flappy_bird.rs  gdt.rs  ints.rs  keyboard.rs  main.rs  mario.rs  mem.rs  sched.rs  spinlock.rs  time.rs
kernel/src/arch/: gdt.rs  ints.rs  keyboard.rs  mem.rs  mod.rs
kernel/src/arch/time/: kvm.rs  mod.rs  pit.rs  tsc.rs
kernel/src/game/: ecs.rs  mod.rs  physics.rs  player.rs  render.rs
kernel/src/player/: mod.rs  physics.rs
kernel/src/time/: kvm.rs  lapic.rs  mod.rs  pit.rs  tsc.rs
kernel/src/utils/: fb.rs  heapless.rs  mod.rs  serial.rs
png_to_rust/: Cargo.toml
png_to_rust/src/: main.rs
